Use class declared constructor